[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dbupgrade"
version = "2023.10.1.dev0"
description = "Database Migration Tool"
readme = "README.md"
include = ["CHANGELOG.md"]
authors = ["Sebastian Rittau <srittau@rittau.biz>"]
license = "MIT"
homepage = "https://github.com/srittau/dbupgrade"
repository = "https://github.com/srittau/dbupgrade"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Software Development",
]
packages = [{ include = "dbupgrade" }]

[tool.poetry.scripts]
dbupgrade = 'dbupgrade.main:main'

[tool.poetry.urls]
"GitHub" = "https://github.com/srittau/dbupgrade"
"Bug Tracker" = "https://github.com/srittau/dbupgrade/issues"
"Changes" = "https://github.com/srittau/dbupgrade/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9"
sqlalchemy = ">=1.4, <3"
sqlparse = ">=0.3.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "~1.6.1"
pytest = "*"
pytest-mock = "^3.6.1"

[tool.pytest.ini_options]
python_files = ["test_*/*.py"]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true  # TODO: due to sqlparse
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
line_length = 79
known_dbupgrade = "dbupgrade"
known_test = "test_dbupgrade"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,DBUPGRADE,TEST"
