[metadata]
name = dbupgrade
version = 2.1.0
description = Database Migration Tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Sebastian Rittau
author_email = srittau@rittau.biz
license = MIT
url = https://github.com/srittau/dbupgrade
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Database
    Topic :: Software Development

[options]
packages = dbupgrade
scripts =
    bin/dbupgrade
python_version = >=3.7
install_requires =
    sqlalchemy>=1.4
    sqlparse>=0.3.0

[options.extras_require]
tests =
    asserts >= 0.8.1, < 0.12
    dectest >= 1.0.0, < 2

[flake8]
# E203: whitespace before operator (black compatibility)
# W503: line break before binary operator (black compatibility)
ignore = E203,W503
